# foundry_backend

./: .gitignore  .kube.yml  Dockerfile  Jenkinsfile  MANIFEST.md  README.md  junit.xml  manage.py  publish.json  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: dockerimage.yml
cicd/: .kube.yml  publish.json
config/: settings.yaml
deploy/: default_permissions.json  nginx.conf  settings.yaml  start.sh  wild_west_permissions.json
deploy/templates/: closing_costs.html  request_for_repairs.html  sales_contract.html
foundry_backend/: autoload.py  settings.py  urls.py  wsgi.py
foundry_backend/api/: __init__.py  apps.py  autoload.py  conftest.py  cors.py  filters.py  function_endpoints.py  models.py  serializers.py  startup.py  tests.py  urls.py  views.py
foundry_backend/api/access/: APIAccessPolicyBase.py  AgencyAccessPolicy.py  HomeAlarmAccessPolicy.py  InterAgencyListingAccessPolicy.py  MLSNumberAccessPolicy.py  RealtorAdminAccessPolicy.py  __init__.py  global_conditions.py
foundry_backend/api/access_policies/: AgencyAccessPolicy.py
foundry_backend/api/endpoints/: __init__.py  generate_contracts.py  register_endpoints.py
foundry_backend/api/migrations/: 0001_initial.py  0002_auto_20191023_1502.py  0002_remove_iampolicy_name.py  0003_auto_20191023_1720.py  0003_iampolicy_name.py  0004_auto_20191018_1636.py  0004_auto_20191027_0506.py
foundry_backend/api/nightly/: daily_messages.py
foundry_backend/api/tasks/: __init__.py  daily_messages.py
foundry_backend/database/: models.py  tests.py  utils.py
foundry_backend/database/migrations/: 0001_initial.py  0002_auto_20190925_1536.py  0002_homealarm.py  0003_mlsnumber.py  0003_showing.py  0004_auto_20190926_1803.py  0004_auto_20191024_1901.py  0005_auto_20190926_1807.py  0005_auto_20191024_1901.py  0006_auto_20191024_1908.py  0006_mlsnumber_owner.py  0007_auto_20190926_2037.py  0007_auto_20191024_2212.py  0008_auto_20190926_2054.py  0008_auto_20191027_0336.py  0009_auto_20190926_2149.py  0009_auto_20191027_0340.py  0010_auto_20191030_1510.py  0010_listing.py  0011_auto_20191030_1630.py  0011_property_schooldistrict_shoppingarea_subdivision.py  0012_auto_20191004_1448.py  0012_auto_20191106_0253.py  0013_auto_20191004_1449.py  0013_auto_20191108_0022.py  0014_auto_20191004_2238.py  0014_auto_20191116_2058.py  0015_auto_20191006_0332.py  0015_property_acreage.py  0016_auto_20191006_1751.py  0016_listingimage.py  0017_auto_20191006_1829.py  (+11 more)
test/: README.md
(+2 files in other folders)
