[tool.poetry]
name = "foundry_backend"
version = "0.1.4"
description = "The backend component of Foundry MLS"
authors = ["The Foundry MLS Team <foundry@abwlabs.com>"]

[tool.poetry.dependencies]
python = "^3.5"
django = "^2.2"
gunicorn = "^19.9"
dynaconf = "^2.1"
pyyaml = "^5.1"
djangorestframework = "^3.10"
django-phonenumber-field = "^3.0"
phonenumbers = "^8.10"
django-address = "^0.2.1"
pytest-django = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
pytest-django = "^3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
