[tool.poetry]
name = "foundry_backend"
version = "0.4.0"
description = "The backend component of Foundry MLS"
authors = ["The Foundry MLS Team <foundry@abwlabs.com>"]

[tool.poetry.dependencies]
python = "^3.5"
django = "^2.2"
gunicorn = "^19.9"
dynaconf = "^2.1"
pyyaml = "^5.1"
djangorestframework = "^3.10"
django-phonenumber-field = "^3.0"
phonenumbers = "^8.10"
django-address = "^0.2.1"
pytest-django = "^3.5"
drf-yasg = "^1.16"
whitenoise = "^4.1"
dry-rest-permissions = "^0.1.10"
djoser = "^2.0"
djangorestframework_simplejwt = "^4.3"

[tool.poetry.scripts]
django_manage = 'manage:main'

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
pytest-django = "^3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
